--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "oca-nats-config"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
 authors = ["elasek <elasek@akond.com>"]
 readme = "README.md"
@@ -9,7 +9,8 @@ packages = [{include = "oca_nats_config"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 nats-py = "^2.3.1"
-serverish = {git = "https://github.com/AkondLab/serverish.git"}
+#serverish = {git = "https://github.com/AkondLab/serverish.git"}
+serverish = {path = "../serverish", develop = true}
 confuse = ">=1.7.0,<1.8.0"
 
 
