--- a/oca_nats_config/config.yaml
+++ b/oca_nats_config/config.yaml
@@ -18,7 +18,7 @@ STREAMS:
             - telemetry.weather.sky_temperature
         MaxAge: 2592000   # czas w sekundach !! trzymania wiadomości 2592000 = 30 days
         MaxBytes: 524288000  # max size in bytes 524288000 = 500 MB
-        NoAck: true
+        NoAck: false
         Discard: old  # jakie wiadomości odrzuca gdy się przepełni
         DenyDelete: false  # pozwól na usunięcie danych
         DenyPurge: false  # pozwól na wyczyszczenie strumienia
