--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "oca-nats-config"
-version = "1.0.1"
+version = "1.1.0"
 description = ""
 authors = ["elasek <elasek@akond.com>"]
 readme = "README.md"
@@ -8,7 +8,7 @@ packages = [{include = "oca_nats_config"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-serverish = {git = "https://github.com/AkondLab/serverish.git", branch="master", extras=["messenger"]}
+serverish = {git="https://github.com/AkondLab/serverish.git", extras=["messenger"], branch="master"}
 confuse = ">=1.7.0,<1.8.0"
 
 
