--- a/oca_nats_config/config.yaml
+++ b/oca_nats_config/config.yaml
@@ -73,13 +73,14 @@ STREAMS:
             - telemetry.water.level
             - telemetry.water2.level
             - telemetry.diesel.level
-            - telemetry.weather.temperature
-            - telemetry.weather.wind
-            - telemetry.weather.wind_dir
-            - telemetry.weather.humidity
-            - telemetry.weather.rain
-            - telemetry.weather.sun_light
-            - telemetry.weather.sky_temperature
+#            - telemetry.weather.temperature
+#            - telemetry.weather.wind
+#            - telemetry.weather.wind_dir
+#            - telemetry.weather.humidity
+#            - telemetry.weather.rain
+#            - telemetry.weather.sun_light
+#            - telemetry.weather.sky_temperature
+            - telemetry.weather.>
         MaxAge: 2592000   # czas w sekundach !! trzymania wiadomości 2592000 = 30 days
         MaxBytes: 524288000  # max size in bytes 524288000 = 500 MB
         NoAck: false
