logging TRACE->INFO console->nats.log

--- a/docker/nats/nats.conf
+++ b/docker/nats/nats.conf
@@ -20,8 +20,9 @@ jetstream {
 }
 
 # Logging
-trace: true
-trace_verbose: false
-debug: true
-logfile_size_limit: 1GB
-# log_file: "/nats/logs/nats.log"
+trace: false
+debug: false
+log_level: INFO
+log_file: "/nats/logs/nats.log"
+logfile_size_limit: 100MB
+logfile_max_num: 5
