--- a/docker/nats/nats.conf
+++ b/docker/nats/nats.conf
@@ -19,6 +19,17 @@ jetstream {
     max_file_store: 10Gb
 }
 
+# WebSocket settings
+websocket {
+  port: 9222
+  endpoint: /ws
+  # Optional, SSL/TLS
+  # tls {
+  #   cert_file: "/path/to/cert.pem"
+  #   key_file: "/path/to/key.pem"
+  # }
+}
+
 # Logging
 trace: false
 debug: false
