--- a/docker/nats/docker-compose.yaml
+++ b/docker/nats/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - "8222:8222"  # Monitoring
       - "6222:6222"  # Clustering
       - "1883:1883"  # MQTT
+      - "9222:9222"    # WebSockets
+
     volumes:  # Persistent volumes
       - ./nats-store:/nats/jetstream  # Map local "nats-store" directory to "/nats/jetstream" inside the container
       - ./nats-log:/nats/logs/        # Map local "nats-log" directory to "/nats/logs" inside the container
