--- a/docker/nats/nats.conf
+++ b/docker/nats/nats.conf
@@ -22,7 +22,7 @@ jetstream {
 # WebSocket settings
 websocket {
   port: 9222
-  path: /ws
+  path: "/ws"
   # Optional, SSL/TLS
   # tls {
   #   cert_file: "/path/to/cert.pem"
