--- a/docker/nats/nats.conf
+++ b/docker/nats/nats.conf
@@ -22,6 +22,8 @@ jetstream {
 # WebSocket settings
 websocket {
   port: 9222
+  no_tls: true
+
   # Optional, SSL/TLS
   # tls {
   #   cert_file: "/path/to/cert.pem"
