--- a/oca_nats_config/config.yaml
+++ b/oca_nats_config/config.yaml
@@ -68,7 +68,7 @@ STREAMS:
     MaxAge: 86400   # 2592000s = 30 days
     MaxBytes: 524288000  # max size in bytes 500 MB
     MaxMsgsPerSubject: 10 # save some history
-    Storage: memory
+#    Storage: memory   # will not survive restart
     NoAck: true
     Discard: old
     DenyDelete: false
@@ -132,7 +132,7 @@ STREAMS:
     Description: "Service heartbeat messages"
     MaxAge: 86400             # 1 day
     MaxBytes: 104857600       # 100 MB
-    Storage: memory           # Fast, no persistence needed
+#    Storage: memory           # Fast, no persistence needed, inmemory streams are not preserved after restart :(
     NoAck: true
     Discard: old
     DenyDelete: false
